# meetup-diversity

./: .gitignore  README.md  app.py  main.py  pyproject.toml  web_server.py
djangolondon/: ai.py  data_saver.py  env.py  meetup.py  query.graphql
meetup/: ai.py  env.py  meetup.py  query.graphql
